2012-03-02  Kees Cook  <keescook@chromium.org>

        [BZ #13656]
        * stdio-common/vfprintf.c (vfprintf): Check for nargs overflow and
        possibly allocate from heap instead of stack.
        * stdio-common/bug-vfprintf-nargs.c: New file.
        * stdio-common/Makefile (tests): Add nargs overflow test.

2012-03-03  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2012-03-03  Marek Polacek  <polacek@redhat.com>

	* include/sys/cdefs.h: Remove __GNUC_PREREQ macro.
	* math/math_private.h: Likewise.
	* stdlib/tst-strtod.c: Likewise.
	* sysdeps/i386/i486/bits/atomic.h: Likewise.
	* sysdeps/x86_64/bits/atomic.h: Likewise.

2012-03-02  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/sparcv9/fpu/s_llrint.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_llrintf.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_lrint.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_lrintf.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_llrint.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_llrintf.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_lrint.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_lrintf.S: New file.

2012-03-02  Roland McGrath  <roland@hack.frob.com>

	[BZ #13792]
	* manual/examples/README: New file, says the example source files
	can be used under GPL>=2.
	* manual/Makefile (%.c.texi): Eat the leading part of the file until a
	line containing just "*/".
	* manual/examples/add.c: Add copyright header (GPL>=2).
	* manual/examples/argp-ex1.c: Likewise.
	* manual/examples/argp-ex2.c: Likewise.
	* manual/examples/argp-ex3.c: Likewise.
	* manual/examples/argp-ex4.c: Likewise.
	* manual/examples/atexit.c: Likewise.
	* manual/examples/db.c: Likewise.
	* manual/examples/dir.c: Likewise.
	* manual/examples/dir2.c: Likewise.
	* manual/examples/execinfo.c: Likewise.
	* manual/examples/filecli.c: Likewise.
	* manual/examples/filesrv.c: Likewise.
	* manual/examples/fmtmsgexpl.c: Likewise.